@@ -149,28 +149,27 @@
                 </dl></p>
             </statement>
             <proof>
-                <p>To see that <m>A</m> is similar to <m>A</m>, we need only demonstrate a nonsingular matrix that effects a similarity transformation of <m>A</m> to <m>A</m>.  <m>I_n</m> is nonsingular (since it row-reduces to the identity matrix, <xref ref="theorem-NMRRI" acro="NMRRI"/>), and<me>\similar{A}{I_n}=I_nAI_n=A</me>.</p>
-                <p>If we assume that <m>A</m> is similar to <m>B</m>, then we know there is a nonsingular matrix <m>S</m> so that <m>B=\similar{A}{S}</m> by <xref ref="definition-SIM" acro="SIM"/>.  By <xref ref="theorem-MIMI" acro="MIMI"/>, <m>\inverse{S}</m> is invertible, and by <xref ref="theorem-NI" acro="NI"/> is therefore nonsingular.  So<md>
-                    <mrow>\similar{B}{(\inverse{S})}&amp;=SB\inverse{S}&amp;&amp;
-                        <xref ref="theorem-MIMI" acro="MIMI"/></mrow>
-                    <mrow>&amp;=S\similar{A}{S}\inverse{S}&amp;&amp;
-                        <xref ref="definition-SIM" acro="SIM"/></mrow>
-                    <mrow>&amp;=\left(S\inverse{S}\right)A\left(S\inverse{S}\right)&amp;&amp;
-                        <xref ref="theorem-MMA" acro="MMA"/></mrow>
-                    <mrow>&amp;=I_nAI_n&amp;&amp;
-                        <xref ref="definition-MI" acro="MI"/></mrow>
-                    <mrow>&amp;=A&amp;&amp;
-                        <xref ref="theorem-MMIM" acro="MMIM"/></mrow>
-                </md>and we see that <m>B</m> is similar to <m>A</m>.</p>
-                <p>Assume that <m>A</m> is similar to <m>B</m>, and <m>B</m> is similar to <m>C</m>.  This gives us the existence of two nonsingular matrices, <m>S</m> and <m>R</m>, such that <m>B=\similar{A}{S}</m> and <m>C=\similar{B}{R}</m>, by <xref ref="definition-SIM" acro="SIM"/>.  (Notice how we have to assume <m>S\neq R</m>, as will usually be the case.)  Since <m>S</m> and <m>R</m> are invertible, so too <m>SR</m> is invertible by <xref ref="theorem-SS" acro="SS"/> and then nonsingular by <xref ref="theorem-NI" acro="NI"/>.  Now<md>
-                    <mrow>\similar{A}{(SR)}&amp;=\similar{\similar{A}{S}}{R}&amp;&amp;
-                        <xref ref="theorem-SS" acro="SS"/></mrow>
-                    <mrow>&amp;=\similar{\left(\similar{A}{S}\right)}{R}&amp;&amp;
-                        <xref ref="theorem-MMA" acro="MMA"/></mrow>
-                    <mrow>&amp;=\similar{B}{R}&amp;&amp;
-                        <xref ref="definition-SIM" acro="SIM"/></mrow>
-                    <mrow>&amp;=C</mrow>
-                </md>so <m>A</m> is similar to <m>C</m> via the nonsingular matrix <m>SR</m>.</p>
+                <p>To see that <m>A</m> is similar to <m>A</m>, we need only demonstrate a nonsingular matrix that effects a similarity transformation of <m>A</m> to <m>A</m>.  <m>I_n</m> is nonsingular (since it row-reduces to the identity matrix, <xref ref="theorem-NMRRI" acro="NMRRI"/>).  Then
+                <me>AI_n = A = I_nA</me>
+                and we see that <m>A</m> is similar to <m>A</m> via the nonsingular matrix <m>I_n</m>.</p>
+                <p>If we assume that <m>A</m> is similar to <m>B</m>, then we know there is a nonsingular matrix <m>S</m> so that <m>AS=SB</m> by <xref ref="definition-SIM" acro="SIM"/>.  By <xref ref="theorem-MIMI" acro="MIMI"/>, <m>\inverse{S}</m> is invertible, and by <xref ref="theorem-NI" acro="NI"/> is therefore nonsingular.  Then
+                <me>B\inverse{S}
+                    = \left(\inverse{S}S\right)B\inverse{S}
+                    = \inverse{S}\left(SB\right)\inverse{S}
+                    = \inverse{S}\left(AS\right)\inverse{S}
+                    = \inverse{S}A\left(S\inverse{S}\right)
+                    = \inverse{S}A
+                </me>
+                and we see that <m>B</m> is similar to <m>A</m> via the nonsingular matrix <m>\inverse{S}R</m>.</p>
+                <p>If we assume that <m>A</m> is similar to <m>B</m>, and <m>B</m> is similar to <m>C</m>, then we know there are two nonsingular matrices, <m>S</m> and <m>R</m>, such that <m>AS=SB</m> and <m>BR=RC</m>, by <xref ref="definition-SIM" acro="SIM"/>.  (Notice how we cannot presume <m>S</m> and <m>R</m> are the same matrix!)  Since <m>S</m> and <m>R</m> are invertible, so too <m>SR</m> is invertible by <xref ref="theorem-SS" acro="SS"/> and then nonsingular by <xref ref="theorem-NI" acro="NI"/>.  Then
+                <me>A\left(SR\right)
+                    = \left(AS\right)R
+                    = \left(SB\right)R
+                    = S\left(BR\right)
+                    = S\left(RC\right)
+                    = \left(SR\right)C
+                </me>
+                so <m>A</m> is similar to <m>C</m> via the nonsingular matrix <m>SR</m>.</p>
             </proof>
         </theorem>
         <p>Here is another theorem that tells us exactly what sorts of properties similar matrices share.</p>
